--- a/index.css
+++ b/index.css
@@ -915,7 +915,6 @@
 .new-arrivals,
 .view-all {
   position: relative;
-  z-index: 1;
 }
 .new-arrivals {
   margin: 0;
@@ -923,14 +922,28 @@
   font-size: inherit;
   font-weight: 400;
   font-family: inherit;
+  
 }
-.view-all {
-  flex: 1;
-  font-size: var(--font-size-xs);
-  font-family: var(--font-poppins);
-  color: var(--color-gray);
-  text-align: center;
+
+.new-arrivals:before {
+  right:0;
+  transform: translate(-100%, -50%);
 }
+
+.new-arrivals:after {
+  left: 0%;
+  transform: translate(100%, -50%);
+}
+.new-arrivals:before, .new-arrivals:after{
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 322px;
+  background-color:rgb(0, 0, 0) ;
+  top: 50%;
+  
+}
+
 .timer-node {
   width: 46px;
   height: 15.3px;
@@ -974,6 +987,7 @@
   gap: 6.6px 0;
 }
 .call-stack-node {
+  
   align-self: stretch;
   display: flex;
   flex-direction: row;
@@ -1055,7 +1069,7 @@
   gap: 10.75px 0;
 }
 .combine-node,
-.dequeue-node,
+.arrivals-node,
 .transform-node {
   display: flex;
   justify-content: flex-start;
@@ -1066,7 +1080,7 @@
   align-items: flex-start;
   padding: 0 16px;
 }
-.dequeue-node {
+.arrivals-node {
   flex: 1;
   flex-direction: column;
   align-items: flex-end;
@@ -1121,12 +1135,21 @@
   background-repeat: no-repeat;
   background-position: top;
 }
-.map-node {
-  align-items: flex-start;
-  padding: var(--padding-mini);
-  z-index: 2;
-  background-color: white;
-}
+  .rectangle-parent:hover .map-node{
+    align-items: flex-start;
+    padding: var(--padding-mini);
+    z-index: 2;
+    background-color: white;
+    display: inline;
+  }
+  .map-node {
+
+    align-items: flex-start;
+    padding: var(--padding-mini);
+    z-index: 2;
+    background-color: white;
+    display: none;
+  }
 .rectangle-parent {
   align-self: stretch;
   height: 360px;
@@ -1200,19 +1223,19 @@
   align-items: flex-end;
   gap: 7.6px 0;
 }
-.dequeue-node-inner,
-.dequeue-node1,
+.arrivals-node-inner,
+.arrivals-node1,
 .frame-parent {
   display: flex;
   justify-content: flex-start;
 }
-.dequeue-node-inner {
+.arrivals-node-inner {
   align-self: stretch;
   flex-direction: row;
   align-items: flex-start;
   padding: 0 11px;
 }
-.dequeue-node1 {
+.arrivals-node1 {
   flex: 1;
   flex-direction: column;
   align-items: flex-end;
@@ -1531,18 +1554,18 @@
   align-items: flex-end;
   gap: 6px 0;
 }
-.dequeue-node-child,
-.dequeue-node2 {
+.arrivals-node-child,
+.arrivals-node2 {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
 }
-.dequeue-node-child {
+.arrivals-node-child {
   align-self: stretch;
   flex-direction: row;
   padding: 0 4px 0 4.199999999999989px;
 }
-.dequeue-node2 {
+.arrivals-node2 {
   flex: 1;
   flex-direction: column;
   gap: 16.5px 0;
@@ -1562,6 +1585,8 @@
   gap: 0 30px;
   font-size: var(--font-size-xs);
 }
+
+
 .subroutine-node {
   flex-direction: column;
   align-items: flex-start;
@@ -1588,31 +1613,8 @@
   display: inline-block;
   z-index: 2;
 }
-.progress-bar,
-.slider-bar {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-}
-.progress-bar {
-  cursor: pointer;
-  border: 0;
-  padding: 13.300000000000011px var(--padding-xl) 10.699999999999989px;
-  background-color: transparent;
-  width: 300px;
-  box-sizing: border-box;
-  background-image: url(./public/rectangle11@2x.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top;
-  white-space: nowrap;
-  z-index: 1;
-}
-.slider-bar {
-  align-self: stretch;
-  padding: 0 var(--padding-xl);
-}
+
+
 .if-statement,
 .while-loop {
   display: flex;
@@ -1736,7 +1738,7 @@
   height: 230px;
   z-index: 1;
 }
-.layer-286-copy,
+
 .opacity-slider-icon,
 .skew-node-icon {
   width: 230px;
@@ -1747,45 +1749,9 @@
   height: 230px;
   z-index: 1;
 }
-.layer-286-copy {
-  height: 45px;
-  display: none;
-}
-.view-gallery {
-  flex: 1;
-  position: relative;
-  font-size: var(--font-size-sm);
-  font-family: var(--font-poppins);
-  color: var(--color-white);
-  text-align: center;
-  z-index: 2;
-}
-.reflection-node,
-.scale-node {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.reflection-node {
-  cursor: pointer;
-  border: 0;
-  padding: 13.100000000000025px 71.8px 10.899999999999975px 72.2px;
-  background-color: transparent;
-  align-self: stretch;
-  flex-direction: row;
-  background-image: url(./public/layer-286-copy@2x.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top;
-  white-space: nowrap;
-  z-index: 1;
-}
-.scale-node {
-  flex: 1;
-  flex-direction: column;
-  gap: 30px 0;
-  min-width: 149px;
-}
+
+
+
 .data-aggregator-icon {
   height: 230px;
   width: 230px;
@@ -1793,16 +1759,7 @@
   object-fit: cover;
   z-index: 1;
 }
-.rotation-node {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 0 5px;
-  min-width: 302px;
-  max-width: 100%;
-}
+
 .next-icon,
 .rectangle-icon17 {
   height: 230px;
@@ -1820,23 +1777,53 @@
   bottom: 96.9px;
   z-index: 2;
 }
-.frame-container,
-.image-mask1 {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-}
-.image-mask1 {
-  justify-content: flex-start;
-  position: relative;
-}
-.frame-container {
+
+
+/* instagram */
+.model-slider {
   width: 1170px;
   flex-wrap: wrap;
   justify-content: center;
   gap: 0 5px;
   max-width: 100%;
+  
 }
+.sliders{
+  display: flex;
+  gap: 5px;
+
+}
+.slider img{
+  width: 230px;
+}
+.prev{
+background: none;
+border: none;
+position: absolute;
+left: 10%;
+top: 76%;
+}
+.prev img{
+  width: 33px;
+}
+.next{
+  background: none;
+  border: none;
+  position: absolute;
+right: 10%;
+top: 76%;
+}
+.next img{
+  width: 33px;
+}
+.gallery{
+  background-color: #232323;
+  color: #ffffff;
+  width: 230px;
+  height: 45px;
+}
+.gallery:hover{
+  box-shadow: 3px 3px 1px #000000;}
 .instagram {
   align-self: stretch;
   display: flex;
@@ -2287,6 +2274,155 @@
   color: var(--color-gray);
   font-family: var(--font-poppins);
 }
+
+.service {
+  text-align: center;
+  background-color: black;
+  color: white;
+  padding: 5rem 0;
+}
+
+.service__title h6 {
+  color: red;
+  font-size: 20px;
+}
+
+.service__title h1 {
+  font-size: 2.5rem;
+  letter-spacing: 2px;
+}
+.service__title p {
+  color: #888888;
+  font-size: 16px;
+}
+.slide__content {
+  width: 75%;
+  margin: 0 auto;
+}
+.slide__content .slide__item {
+  width: 200px;
+  height: 200px;
+  color: gray;
+  background-color: white;
+  /* display: flex !important; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  position: relative;
+}
+
+.slick-dots li button:before {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.slick-dots li.slick-active button:before {
+  color: red;
+}
+
+.slide__content .slide__item::after {
+  content: "";
+  width: 5px;
+  height: 0;
+  background-color: red;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: all 0.5s;
+}
+
+.slide__content .slide__item:hover::after {
+  height: 100%;
+}
+
+.showcase {
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 5rem;
+}
+.showcase__title {
+  text-align: center;
+}
+
+.showcase__title h1 {
+  font-size: 4rem;
+}
+
+.showcase__title h6 {
+  font-size: 2rem;
+}
+
+.showcase__title p {
+  color: #888888;
+  font-size: 16px;
+}
+
+.showcase__content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+.showcase__item {
+  position: relative;
+}
+.showcase__item:hover .showcase__overlay {
+  opacity: 0.7;
+}
+.showcase__item:hover .showcase__icon {
+  transform: translateY(0);
+}
+
+.showcase__item:hover .showcase__text {
+  transform: translateY(0);
+}
+.showcase__item img {
+  width: 100%;
+  filter: grayscale(100%);
+}
+
+.showcase__overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  background: red;
+  padding: 2rem;
+  color: white;
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+.showcase__icon {
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  transform: translateY(20px);
+  transition: all 0.5s;
+}
+
+.showcase__icon i {
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background-color: white;
+  color: black;
+  transition: all 0.5s;
+}
+.showcase__icon i:hover {
+  background-color: black;
+  color: white;
+}
+
+.showcase__text {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+  transform: translateY(20px);
+  transition: all 0.5s;
+}
 @media screen and (max-width: 1850px) {
   .top-message {
     flex-wrap: wrap;
@@ -2412,3 +2548,6 @@
     box-sizing: border-box;
   }
 }
+
+
+
